Projects/.metadata/.plugins/org.eclipse.cdt.ui/OldCass2.build.log
19:02:24 **** Incremental Build of configuration Default for project OldCass2 ****
make 
gcc -W -Wall -Werror -std=c99 -g -c shell.c
shell.c: In function 'main':
shell.c:6:3: error: implicit declaration of function 'fork' [-Werror=implicit-function-declaration]
   fork();
   ^
cc1.exe: all warnings being treated as errors
make: *** [shell.o] Error 1

19:02:24 Build Finished (took 338ms)

